[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprites/back.png" type="Texture" id=1]
[ext_resource path="res://sprites/backgrounds/console_right.png" type="Texture" id=2]
[ext_resource path="res://objects/radio/Radio.gd" type="Script" id=3]
[ext_resource path="res://objects/radio/Waveform.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/computer.tres" type="DynamicFont" id=5]
[ext_resource path="res://objects/radio/RadioSlider.tscn" type="PackedScene" id=6]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1

[node name="Radio" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -320.0
margin_bottom = -180.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
show_behind_parent = true
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="Waveform" parent="." instance=ExtResource( 4 )]
material = SubResource( 1 )
margin_left = 40.0
margin_top = 32.0
margin_right = -40.0
margin_bottom = -84.0
rect_min_size = Vector2( 240, 64 )

[node name="Label_Status" type="Label" parent="."]
material = SubResource( 2 )
margin_left = 32.0
margin_top = 96.0
margin_right = 288.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.407843, 0.498039, 0.541176, 1 )
text = "SIGNAL GOOD"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Angle" type="Label" parent="."]
material = SubResource( 3 )
margin_left = 56.0
margin_top = 116.0
margin_right = 144.0
margin_bottom = 132.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.407843, 0.498039, 0.541176, 1 )
text = "ANGLE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RadioSlider_Angle" parent="." instance=ExtResource( 6 )]
material = SubResource( 4 )
margin_left = 56.0
margin_top = 128.0
margin_right = -176.0
margin_bottom = -36.0

[node name="Label_Frequency" type="Label" parent="."]
material = SubResource( 3 )
margin_left = 168.0
margin_top = 116.0
margin_right = 256.0
margin_bottom = 132.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.407843, 0.498039, 0.541176, 1 )
text = "FREQUENCY"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RadioSlider_Frequency" parent="." instance=ExtResource( 6 )]
material = SubResource( 4 )
margin_left = 168.0
margin_top = 128.0
margin_right = -64.0
margin_bottom = -36.0

[node name="Button_Back" type="TextureButton" parent="."]
margin_left = 2.0
margin_top = 162.0
margin_right = 18.0
margin_bottom = 178.0
texture_normal = ExtResource( 1 )
[connection signal="value_changed" from="RadioSlider_Angle" to="." method="_on_RadioSlider_Angle_value_changed"]
[connection signal="value_changed" from="RadioSlider_Frequency" to="." method="_on_RadioSlider_Frequency_value_changed"]
[connection signal="pressed" from="Button_Back" to="." method="_on_Button_Back_pressed"]
